# evm-wallet-scanner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RISK_POLICY.md  policy.yaml  pyproject.toml
examples/: multichain_summary.py  tx_history.py  wallet_overview.py
src/evm_wallet_scanner/: __init__.py  audit.py  chains.py  cli.py  policy.py  state_machine.py
src/evm_wallet_scanner/balances/: __init__.py  wallet_balance.py  wallet_multichain_summary.py  wallet_overview.py
src/evm_wallet_scanner/common/: __init__.py
src/evm_wallet_scanner/doctor/: __init__.py  cli.py  preflight.py
src/evm_wallet_scanner/history/: __init__.py  wallet_counterparties.py  wallet_history.py  wallet_transfer_report.py
src/evm_wallet_scanner/portfolio/: __init__.py  wallet_gas_report.py  wallet_portfolio_value.py
src/evm_wallet_scanner/status/: __init__.py  wallet_tx_status.py
src/evm_wallet_scanner/transfer/: __init__.py  wallet_transfer.py
tests/: test_policy.py  test_scanner.py  test_state_machine.py
