[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evm-wallet-scanner"
version = "0.1.0"
description = "Zero-dependency EVM wallet scanner — balances, history, transfers, portfolio, gas reports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "counterfactual5"},
]
keywords = ["evm", "ethereum", "wallet", "scanner", "balance", "history", "erc20", "defi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Zero external dependencies — pure Python standard library + optional eth-account.
dependencies = []

[project.optional-dependencies]
signer = ["eth-account>=0.10.0"]
dev = ["pytest>=7.0", "pytest-cov", "ruff>=0.1.0"]
all = ["eth-account>=0.10.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
